--- a/client-app/package.json
+++ b/client-app/package.json
@@ -2,6 +2,7 @@
   "name": "client-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:44366",
   "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
