Starting work on connecting to bungie API, currently can just get one weapons information

--- a/DestinyVaultSorter/DestinyVaultSorter.csproj
+++ b/DestinyVaultSorter/DestinyVaultSorter.csproj
@@ -24,6 +24,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,6 +36,7 @@
 
   <ItemGroup>
     <Folder Include="client-app\src\components\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
   <ItemGroup>
